trying to fix overflow

--- a/my-app-fe/src/App.css
+++ b/my-app-fe/src/App.css
@@ -106,10 +106,10 @@ h2 {
 .taskWindow {
   position: fixed;
   width: 20%;
-  height: 100vh;
+  height: 50vh;
   left: 0;
   z-index: 2;
-  max-height: 100vh;
+  max-height: 50vh;
   overflow-y: scroll;
   background-color: gray;
   box-sizing: border-box;
